--- a/SampleTestPrj/pom.xml
+++ b/SampleTestPrj/pom.xml
@@ -23,8 +23,9 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-				<source>1.8</source>
-				<target>1.8</target>
+				<verbose>true</verbose>
+          <fork>true</fork>
+          <executable>C:\Program Files\Java\jdk1.8.0_251\bin\javac</executable>
 			</configuration>
       </plugin>  
   </plugins>
