--- a/SampleTestPrj/pom.xml
+++ b/SampleTestPrj/pom.xml
@@ -26,6 +26,7 @@
           <verbose>true</verbose>
           <fork>true</fork>
           <executable>C:\Program Files\Java\jdk1.8.0_251\bin\javac</executable>
+          <compilerVersion>1.8</compilerVersion>
         </configuration>
       </plugin>  
   </plugins>
