--- a/SampleTestPrj/pom.xml
+++ b/SampleTestPrj/pom.xml
@@ -16,14 +16,15 @@
 	</suiteXmlFiles>
 </configuration>
  	</plugin>
-  
-   	<plugin>
+     	
+ <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>1.8</source>
-		  <target>1.8</target>
+          <verbose>true</verbose>
+          <fork>true</fork>
+          <executable>C:\Program Files\Java\jdk1.8.0_251\bin\javac</executable>
         </configuration>
       </plugin>  
   </plugins>
