--- a/SampleTestPrj/pom.xml
+++ b/SampleTestPrj/pom.xml
@@ -20,13 +20,14 @@
  <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <verbose>true</verbose>
-          <fork>true</fork>
-          <executable>C:\Program Files\Java\jdk1.8.0_251\bin\javac</executable>
-        </configuration>
-      </plugin>  
+        <version>3.8.1</version> 
+  		<configuration>
+ 	
+    			<source>1.8</source>
+				<target>1.8</target>
+  			
+  		</configuration>
+ </plugin>  
   </plugins>
   </build>
   
